# WebServices

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  cleanup_seed_data.py  main.py  pyproject.toml  seed_data.py
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  main.py  scheduler.py
crud/: authors.py  papers.py  users.py
mcp_server/: server.py
migrations/: env.py
migrations/versions/: 12472787350c_create_initial_tables.py  3a4f7c49cc41_create_papers_table.py  3c37c79452bc_create_initial_tables.py  43481e5552c2_initial_schema_setup.py  c35c7a54af6c_add_ivfflat_index_for_paper_embeddings.py  f3df81e2f33d_add_author_normalized_name.py
models/: __init__.py  annotation.py  author.py  citation.py  paper.py  user.py
routers/: analytics.py  annotations.py  auth.py  authors.py  crawl.py  papers.py
schemas/: analytics.py  auth.py  author.py  paper.py  utils.py
services/: auth.py  crawler.py  embeddings.py  pagerank.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_config.py  test_papers.py  test_users_crud.py
